--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
         5.上<br/>
-        黑一烊 , 《我就喜欢花花世界——红世界》 , 2015；<br/>
+        黑一烊 , 《我就喜欢花花世界——花边》 , 2015；<br/>
         装置 , 81X82cm（圆直径：66cm）
     </div>
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
