--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
     <!--头部结束-->
     <!--图片-->
-    <img src="http://i4.piimg.com/564462/8a82deb4f16ca46d.gif" alt="" style="width:100%;height:694px;">
+    <img src="http://i4.piimg.com/564462/8a82deb4f16ca46d.gif" alt="" style="width:100%;">
     <!--图片结束-->
     <!--文字-->
     <div style="width:100%;height:auto;margin:85px 0;line-height:150%;font-size:24px;">
-        “我就喜欢花花世界”黑一烊巡回展第二站将于2016年9月30日下午3时登陆“2016 UNKNOW AISA”艺术博览会。
+        “我就喜欢花花世界”黑一烊巡回展第二站将于2016年9月30日下午3时登陆“2016 UNKNOW/AISA”艺术博览会。
     </div>
     <!--文字结束-->
     <!--展位号-->
@@ -31,28 +31,28 @@
     <!--展位号结束-->
     <!--展位布局-->
     <img src="http://i1.piimg.com/564462/cb5cce361175d474.jpg" alt="" style="width:100%;height:auto;">
-    <img src="http://i2.buimg.com/564462/9dfaef441f68f90b.jpg" alt="" style="width:100%;height:578px;">
+    <img src="http://i4.piimg.com/564462/c0b3d91354e77405.jpg" alt="" style="width:100%;margin-bottom:35px;">
     <!--展位布局结束-->
     <!--作品-->
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
-        1.上<br/>
-        黑一烊  , 《我就喜欢花花世界——壹圆毛泽东》 , 2015；<br/>
-        装置 , 81X82cm（圆直径：66cm）
-    </div>
-    <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
-        2.下<br/>
-        黑一烊 , 《我就喜欢花花世界——人行》 , 2015；<br/>
-        装置 , 81X82cm（圆直径：66cm）
-    </div>
-    <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
-        3. <br/>
+        1.<br/>
         黑一烊 , 《我就喜欢花花世界——彩虹》 , 2015；<br/>
         装置 , 150X150cm
     </div>
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
-        4.  <br/>
-        黑一烊 , 《我就喜欢花花世界——白色》 , 2015；<br/>
+        2.<br/>
+        黑一烊 , 《我就喜欢花花世界——白色》黑一烊 , 2015；<br/>
         装置 , 150X150cm
+    </div>
+    <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
+        3. 上<br/>
+        黑一烊  , 《我就喜欢花花世界——壹圆毛泽东》 , 2015；<br/>
+        装置 , 81X82cm（圆直径：66cm）
+    </div>
+    <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
+        4.下 <br/>
+        黑一烊  , 《我就喜欢花花世界——人行》 , 2015；<br/>
+        装置 , 81X82cm（圆直径：66cm）
     </div>
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
         5.上<br/>
