--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--展位号结束-->
     <!--展位布局-->
     <img src="http://i1.piimg.com/564462/cb5cce361175d474.jpg" alt="" style="width:100%;height:auto;">
-    <img src="http://i4.piimg.com/564462/c0b3d91354e77405.jpg" alt="" style="width:100%;margin-bottom:35px;">
+    <img src="http://i4.piimg.com/564462/c0b3d91354e77405.jpg" alt="" style="width:100%;margin:32px 0 35px 0">
     <!--展位布局结束-->
     <!--作品-->
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
@@ -131,7 +131,7 @@
     <div style="text-align: center;margin-top:80px;font-size:24px;">
         <p>想得美在深圳市南山区华侨城创意文化园北区C3栋302</p>
         <p>T: 86 755 82484277</p>
-        <P>F：86 755 82484279</P>
+        <P>F: 86 755 82484279</P>
         <P>info@xiangdemei.org</P>
         <P>www.xiangdemei.org </p>
     </div>
