--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div style="width:920px;height:auto;margin:0 auto">
     <!--头部-->
     <div style="width:100%;height:90px;margin:54px 0 80px 0">
-        <div style="width:800px;height:90px;float:left;font-size:26px;">“我就喜欢花花世界 —— 黑一烊巡回展”
+        <div style="width:800px;height:90px;float:left;font-size:26px;">“我就喜欢花花世界”—— 黑一烊巡回展
             <br/>大阪站：UNKNOWN/ASIA
         </div>
         <a href="https://ladykillertao.github.io/dabanying/"><div style="width:100px;height:95px;float:right;text-align: right">ENG</div></a>
