--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <!--图片结束-->
     <!--文字-->
     <div style="width:100%;height:auto;margin:85px 0;line-height:150%;font-size:24px;">
-        “我就喜欢花花世界”黑一烊巡回展第二站将于2016年9月30日下午3时登陆“2016 UNKNOW/AISA”艺术博览会。
+        “我就喜欢花花世界”黑一烊巡回展第二站将于2016年9月30日下午3时登陆“2016 UNKNOW/AISA”艺术博览会。欢迎莅临想得美展位：K-12参观！
     </div>
     <!--文字结束-->
     <!--展位号-->
     <div style="width:100%;height:auto;margin:85px 0;line-height:150%;font-size:24px;">
-          VIP预展：2016.9.30 (周五) / 15:00-20:30 贵宾预展 & 开幕晚会（筹办者及持有邀请函） <br/>公众开放：2016.10.01（周六） / 10:00-20:00
+        展位号：K-12<br/>VIP预展：2016.9.30 (周五) / 15:00-20:30 贵宾预展 & 开幕晚会（筹办者及持有邀请函） <br/>公众开放：2016.10.01（周六） / 10:00-20:00
         <div style="padding-left:120px;"> 2016.10.02（周日） / 10:00-17:00</div>展览地点：HERBIS HALL Osaka（530-001 大阪市北区梅田 2-5-25 哈比斯大堂B2F）<br/>艺术家：黑一烊<br/>策展人：冯原
     </div>
     <!--展位号结束-->
