--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
         2.<br/>
-        黑一烊 , 《我就喜欢花花世界——白色》黑一烊 , 2015；<br/>
+        黑一烊 , 《我就喜欢花花世界——白色》, 2015；<br/>
         装置 , 150X150cm
     </div>
     <div style="width:100%;height:auto;line-height:150%;margin-bottom:50px;font-size:24px;">
@@ -103,7 +103,7 @@
     <!--想得美结束-->
     <div style="width:100%;height:auto;text-align: center;">
         <p>想得美成立于2015年 , 是一家实验型当代艺术机构。</p>
-        <p>所有创作灵感来源于个人对当下境况发展展开的一种美好愿景的期待，</p>
+        <p>所有创作灵感来源于个人对当下境况发展展开的一种美好愿景的期待 ,</p>
         <p>也隐射美好的想法不被他人所看好 , 含有被调侃讽刺的意味。</p>
     </div>
     <!--二维码-->
