--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--图片结束-->
     <!--文字-->
     <div style="width:100%;height:auto;margin:85px 0;line-height:150%;font-size:24px;">
-        “我就喜欢花花世界”黑一烊巡回展第二站将于2016年9月30日下午3时登陆“2016 UNKNOW/AISA”艺术博览会。欢迎莅临想得美展位：K-12参观！
+        “我就喜欢花花世界”黑一烊巡回展第二站将于2016年9月30日下午3时登陆“2016 UNKNOWN/ASIA”艺术博览会。欢迎莅临想得美展位：K-12参观！
     </div>
     <!--文字结束-->
     <!--展位号-->
